metabase/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metabase
  namespace: metabase
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metabase
  template:
    metadata:
      labels:
        app: metabase
    spec:
      containers:
        - name: metabase
          image: metabase/metabase:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.25"
            limits:
              memory: "2Gi"
              cpu: "0.5"
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 120
            timeoutSeconds: 30
            failureThreshold: 6
            periodSeconds: 10
