metabase/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metabase
  namespace: metabase
spec:
  selector:
    app: metabase
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
